CacheInvalidator to use URI class instead of URL